--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet"> 
-    <title>Victor Bolivar | Fronted Developer</title>
+    <title>Victor Bolivar | Desarrollador Web</title>
   </head>
   <body>
     <div id="root"></div>
